@@ -5,6 +5,7 @@ V1.1.1
   However, hardcoded MAX limits can not be exceeded.
 - fixed distinction between WorldEdit and manual distance setting
 - fixed error message handling
+- corrected config descriptions to match current implementation
 
 V1.1.0
 - added (optional) WorldEdit support for selecting the scanned area
